<?xml version="1.0" encoding="utf-8"?>
<resources>

 <string name="app_name">冷暖</string>
    <string name="app_name_en">Meteora</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_">Login_Activity</string>
    <string name="title_activity_welcome_interface">WelcomeInterface</string>
    <string name="title_activity_device__select">Device_Select</string>
    <string name="hint_email">邮箱</string>
    <string name="hint_user_name">用户名</string>
    <string name="hint_password">密码</string>
    <string name="buttontext_login">登陆</string>
    <string name="buttontext_signup">注册</string>
    <string name="checkboxtext_rememberme">记住我</string>
    <string name="link_find_password">忘记密码?</string>
    <string name="checkboxtext_showpassword">显示密码</string>
    <string name="title_activity_data__view">Data_View</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="humidity">湿度</string>
    <string name="tempature">温度</string>
    <string name="pressure">气压</string>
    <string name="mapview">地图</string>
</resources>
